// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.basic 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleLightIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.basic 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-clickable"
  color="primary"
  isClickable={true}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.basic 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-disabled lucid-MinusCircleLightIcon-is-clickable"
  color="primary"
  isClickable={true}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.basic 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-active"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.basic 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-clickable lucid-MinusCircleLightIcon-is-active"
  color="primary"
  isClickable={true}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.basic 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-disabled lucid-MinusCircleLightIcon-is-clickable lucid-MinusCircleLightIcon-is-active"
  color="primary"
  isClickable={true}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.basic 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-clickable lucid-MinusCircleLightIcon-is-active"
  color="primary"
  isClickable={true}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for Primary 1`] = `
<MinusCircleLightIcon
  aspectRatio="xMidYMid meet"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
/>
`;
